@@ -124,6 +124,7 @@ Version 2.1.1
    - Bugfix: Once mail is displayed set mailbox status to MAILBOX_OLD
    - Bugfix: Note only those mails for displaying that will be displayed
         (local mailboxes)
+   - Feature: Gnubiff applet and/or popup may appear in pagers or not
 
 Version 2.1.0
  * Nicolas Rougier
